--- a/BR2JSX/package.json
+++ b/BR2JSX/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "RainbowFrame",
+  "name": "BR2JSX",
   "version": "1.0.0",
-  "description": "RainbowFrame",
+  "description": "BR2JSX",
   "main": "App.js",
   "scripts": {
     "build": ".\\node_modules\\.bin\\webpack",
