--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,11 +2,13 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yantylets.github.io/FD3-Tylets/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^1.1.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-chartjs": "^1.2.0",
     "react-dom": "^17.0.2",
@@ -18,6 +20,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
